# ai-catalog

./: .gitignore  README.md  cli-reference.html  index.html  index.json  manifest.json  toc.html  toc.json  xrefmap.yml
.squad/: .first-run  config.json  decisions.md  routing.md  team.md  upstream.json
api/: SpecWorks.AiCatalog.AiCatalogException.html  SpecWorks.AiCatalog.Models.AiCatalog.html  SpecWorks.AiCatalog.Models.Attestation.html  SpecWorks.AiCatalog.Models.CatalogEntry.html  SpecWorks.AiCatalog.Models.HostInfo.html  SpecWorks.AiCatalog.Models.ProvenanceLink.html  SpecWorks.AiCatalog.Models.Publisher.html  SpecWorks.AiCatalog.Models.TrustManifest.html  SpecWorks.AiCatalog.Models.TrustSchema.html  SpecWorks.AiCatalog.Models.html  SpecWorks.AiCatalog.Parsing.AiCatalogParseException.html  SpecWorks.AiCatalog.Parsing.AiCatalogParser.html  SpecWorks.AiCatalog.Parsing.html  SpecWorks.AiCatalog.Serialization.AiCatalogSerializer.html  SpecWorks.AiCatalog.Serialization.html  SpecWorks.AiCatalog.Validation.AiCatalogValidator.html  SpecWorks.AiCatalog.Validation.ConformanceLevel.html  SpecWorks.AiCatalog.Validation.DiagnosticSeverity.html  SpecWorks.AiCatalog.Validation.ValidationDiagnostic.html  SpecWorks.AiCatalog.Validation.ValidationResult.html  (+4 more)
python/: README.md  pyproject.toml
python/src/aicatalog/: __init__.py  converter.py  exceptions.py  models.py  parser.py  serializer.py  validator.py
python/src/aicatalog/cli/: __init__.py  main.py
python/tests/: conftest.py  test_cli.py  test_integration.py  test_negative.py  test_parsing.py  test_serialization.py  test_validation.py
(+104 files in other folders)
