[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specworks-aicatalog"
version = "0.1.0"
description = "Python implementation of the AI Card specification (application/ai-catalog+json)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai-catalog", "ai-card", "agent-card", "specworks", "a2a"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/spec-works/ai-catalog"
Documentation = "https://agent-card.github.io/ai-card/"
Repository = "https://github.com/spec-works/ai-catalog"
Issues = "https://github.com/spec-works/ai-catalog/issues"

[project.scripts]
ai-catalog = "aicatalog.cli.main:main"

[project.optional-dependencies]
cli = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aicatalog"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
